Grace/tests/gibbs/errors/t081.grace
// ERROR = P1004
def x = 1

match(x)
    case 1 | 2 -> print "One or two"
